<resources>
        <string name="app_name">Pizza Order Form</string>
        <string name="welcomeTitle">Pizza Your Way</string>
        <string name="getStarted">Get Started</string>
        <string name="viewPastOrders">View Past Orders</string>
        <string name="pizzaBaseTitle">Choose Your Base</string>
        <string name="size">Size</string>
        <string name="nlsize">Maat</string>
        <string name="size1">SM</string>
        <string name="size2">M</string>
        <string name="size3">L</string>
        <string name="size4">XL</string>
        <string name="crust">Crust</string>
        <string name="nlcrust">Korst</string>
        <string name="crust1">Thin</string>
        <string name="crust2">Regular</string>
        <string name="crust3">Stuffed</string>
        <string name="cheese">Cheese</string>
        <string name="nlcheese">Kaas</string>
        <string name="cheese1">Light</string>
        <string name="cheese2">Regular</string>
        <string name="cheese3">Extra</string>
        <string name="toppingSelection">Topping Selection</string>
        <string name="toppingsTitle">Choose Your Toppings</string>
        <string name="toppingsInfo1">Select up to 3</string>
        <string name="toppingsInfo2">Tap and hold a topping to remove it</string>
        <string name="topping1">Pepperoni</string>
        <string name="topping2">Bacon</string>
        <string name="topping3">Ham</string>
        <string name="topping4">Sausage</string>
        <string name="topping5">Mushrooms</string>
        <string name="topping6">Parmesan</string>
        <string name="topping7">Roasted Garlic</string>
        <string name="topping8">Basil</string>
        <string name="topping9">Onions</string>
        <string name="topping10">Pickles</string>
        <string name="topping11">Tomatoes</string>
        <string name="topping12">Olives</string>
        <string name="topping13">Pineapple</string>
        <string name="topping14">Banana Peppers</string>
        <string name="topping15">Anchovies</string>
        <string name="topping16">Green Peppers</string>
        <string name="back">Back</string>
        <string name="deliveryDetails">Delivery Details</string>
        <string name="enToppingsPrompt">Please select at least one topping</string>
        <string name="nlToppingsPrompt">Selecteer ten minste één topping</string>
        <string name="enToppingsError">Max toppings reached!</string>
        <string name="nlToppingsError">Max toppings bereikt!</string>
        <string name="nameLabel">Name:</string>
        <string name="phoneLabel">Phone Number:</string>
        <string name="address1Label">Address Line 1:</string>
        <string name="address2Label">Address Line 2:</string>
        <string name="cityLabel">City:</string>
        <string name="postalLabel">Postal Code:</string>
        <string name="review">Review Order</string>
        <string name="enValidationPrompt">Please update fields underlined in red and try again.</string>
        <string name="nlValidationPrompt">Werk de rood onderstreepte velden bij en probeer het opnieuw.</string>
        <string name="orderDetailsTitle">Order Details</string>
        <string name="orderId">Order ID:</string>
        <string name="edit">edit</string>
        <string name="confirm">Confirm and Place Order</string>
        <string name="confirmationTitle">Thank You For Your Order</string>
        <string name="date">Placed on:</string>
        <string name="backToMenu">Back to Menu</string>
        <string name="orderRecordTitle">Your Past Pizzas</string>
        <string name="orderNumber">Order Number</string>
        <string name="view">view</string>
        <string name="delete">delete</string>
        <string-array name="en_mainactivity">
                <item>Pizza Order Form</item>
                <item>Get Started</item>
                <item>View Past Orders</item>
                <item>NL</item>
        </string-array>
        <string-array name="nl_mainactivity">
                <item>Bestelformulier Voor Pizza\'s</item>
                <item>Begin</item>
                <item>Bekijk Eerdere Bestellingen</item>
                <item>EN</item>
        </string-array>
        <string-array name="en_baseactivity">
                <item>Choose Your Base</item>

                <item>Size</item>
                <item>SM</item>
                <item>M</item>
                <item>L</item>
                <item>XL</item>

                <item>Crust</item>
                <item>Thin</item>
                <item>Regular</item>
                <item>Stuffed</item>

                <item>Cheese</item>
                <item>Light</item>
                <item>Regular</item>
                <item>Extra</item>

                <item>Topping Selection</item>
        </string-array>
        <string-array name="nl_baseactivity">
                <item>Kies je Basis</item>
                <item>Maat</item>
                <item>SM</item>
                <item>M</item>
                <item>L</item>
                <item>XL</item>

                <item>Korst</item>
                <item>Dun</item>
                <item>Normaal</item>
                <item>Gevulde</item>

                <item>Kaas</item>
                <item>Licht</item>
                <item>Normaal</item>
                <item>Extra</item>

                <item>Topping Selectie</item>
        </string-array>
        <string-array name="en_size">
                <item>SM</item>
                <item>M</item>
                <item>L</item>
                <item>XL</item>
        </string-array>
        <string-array name="nl_size">
                <item>SM</item>
                <item>M</item>
                <item>L</item>
                <item>XL</item>
        </string-array>
        <string-array name="en_crust">
                <item>Thin</item>
                <item>Regular</item>
                <item>Stuffed</item>
        </string-array>
        <string-array name="nl_crust">
                <item>Dun</item>
                <item>Normaal</item>
                <item>Gevulde</item>
        </string-array>
        <string-array name="en_cheese">
                <item>Light</item>
                <item>Regular</item>
                <item>Extra</item>
        </string-array>
        <string-array name="nl_cheese">
                <item>Licht</item>
                <item>Normaal</item>
                <item>Extra</item>
        </string-array>
        <string-array name="en_toppingsactivity">
                <item>Choose Your Toppings</item>
                <item>Select up to 3</item>
                <item>Tap and hold a topping to remove it</item>

                <item>Pepperoni</item>
                <item>Bacon</item>
                <item>Ham</item>
                <item>Sausage</item>
                <item>Mushrooms</item>
                <item>Parmesan</item>
                <item>Roasted Garlic</item>
                <item>Basil</item>
                <item>Onions</item>
                <item>Pickles</item>
                <item>Tomatoes</item>
                <item>Olives</item>
                <item>Pineapple</item>
                <item>Banana Peppers</item>
                <item>Anchovies</item>
                <item>Green Peppers</item>
                <item>Feta</item>
                <item>Chili Oil</item>

                <item>Back</item>
                <item>Delivery Details</item>
        </string-array>
        <string-array name="nl_toppingsactivity">
                <item>Kies je Toppings</item>
                <item>Selecteer maximaal 3</item>
                <item>Blijf een topping aanraken om deze te verwijderen</item>

                <item>Pepperoni</item>
                <item>Spek</item>
                <item>Ham</item>
                <item>Worst</item>
                <item>Paddestoelen</item>
                <item>Parmezaanse</item>
                <item>Geroosterde knoflook</item>
                <item>Basilicum</item>
                <item>Uien</item>
                <item>Augerken</item>
                <item>Tomaten</item>
                <item>Olijven</item>
                <item>Ananas</item>
                <item>Bananenpeper</item>
                <item>Ansjovis</item>
                <item>Groene pepers</item>
                <item>Feta</item>
                <item>Chili Olie</item>

                <item>Terug</item>
                <item>Verzendgegevens</item>
        </string-array>
        <string-array name="en_toppings">
                <item>Pepperoni</item>
                <item>Bacon</item>
                <item>Ham</item>
                <item>Sausage</item>
                <item>Mushrooms</item>
                <item>Parmesan</item>
                <item>Roasted Garlic</item>
                <item>Basil</item>
                <item>Onions</item>
                <item>Pickles</item>
                <item>Tomatoes</item>
                <item>Olives</item>
                <item>Pineapple</item>
                <item>Banana Peppers</item>
                <item>Anchovies</item>
                <item>Green Peppers</item>
                <item>Feta</item>
                <item>Chili Oil</item>
        </string-array>
        <string-array name="nl_toppings">
                <item>Pepperoni</item>
                <item>Spek</item>
                <item>Ham</item>
                <item>Worst</item>
                <item>Paddestoelen</item>
                <item>Parmezaanse</item>
                <item>Geroosterde knoflook</item>
                <item>Basilicum</item>
                <item>Uien</item>
                <item>Augerken</item>
                <item>Tomaten</item>
                <item>Olijven</item>
                <item>Ananas</item>
                <item>Bananenpeper</item>
                <item>Ansjovis</item>
                <item>Groene pepers</item>
                <item>Feta</item>
                <item>Chili Olie</item>
        </string-array>
        <string-array name="en_deliveryactivity">
                <item>Your Delivery Details</item>

                <item>Name:</item>
                <item>Phone Number:</item>
                <item>Address Line 1:</item>
                <item>City:</item>
                <item>Postal Code:</item>
                <item>Review Order</item>
        </string-array>
        <string-array name="nl_deliveryactivity">
                <item>Uw Bezorggegevens</item>

                <item>Naam:</item>
                <item>Telefoonnummer</item>
                <item>Adres 1:</item>
                <item>Stad:</item>
                <item>Postcode:</item>
                <item>Bestelling bekijken</item>
        </string-array>
        <string-array name="en_reviewactivity">
                <item>Order Details</item>
                <item>Order ID:</item>
                <item>edit</item>
                <item>Confirm and Place Order</item>
                <item>Finish</item>
        </string-array>
        <string-array name="nl_reviewactivity">
                <item>Bestel Details</item>
                <item>Bestelling:</item>
                <item>redigeren</item>
                <item>Bevestigen en Bestellen</item>
                <item>Einde</item>
        </string-array>
        <string-array name="en_confirmationactivity">
                <item>Thank You For Your Order</item>
                <item>Placed on:</item>
                <item>Back to Menu</item>
                <item>View Past Orders</item>
        </string-array>
        <string-array name="nl_confirmationactivity">
                <item>Bedankt voor je Bestelling</item>
                <item>Geplaatst op:</item>
                <item>Terug Naar Menu</item>
                <item>Bekijk eerdere bestellingen</item>
        </string-array>
</resources>