<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".OrderDetailsActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <ImageView
        android:id="@+id/imgGreenCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/green_check"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tvThankYou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|top"
        android:padding="20dp"
        android:text="@string/confirmationTitle"
        android:textAllCaps="true"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/tvDateOrdered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnBackToMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/backToMenu"
        android:textSize="20sp"
        app:cornerRadius="50dp">

    </Button>

    <Button
        android:id="@+id/btnPastOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/viewPastOrders"
        android:textSize="20sp"
        app:cornerRadius="50dp">

    </Button>

</LinearLayout>