<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background2"

    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_gravity="center"
        android:layout_weight="2.5"
        android:gravity="center"
        android:text="@string/welcomeTitle"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="0.5"
        android:text="@string/getStarted"
        android:textSize="34sp"
        app:cornerRadius="50dp" />

    <Button
        android:id="@+id/btnViewPastOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="0.2"
        android:text="@string/viewPastOrders"
        android:textSize="16sp"
        app:cornerRadius="50dp" />

    <Switch
        android:id="@+id/tglLanguage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:checked="false"
        android:fontFamily="@font/app_default"
        android:showText="false"
        android:switchMinWidth="100dp"
        android:switchPadding="10dp"
        android:text='Language'
        android:textColor="@color/white"
        android:textSize="34sp"
        android:thumbTint="@color/naples_yellow"
        tools:checked="false" />


</LinearLayout>